--- a/styles.css
+++ b/styles.css
@@ -21,16 +21,14 @@ button {
 .sketchbox {
     height: 960px;
     width: 960px;
-    border: 1px dashed #a9a9a9;
 }
 
 .row {
     display: flex;
 }
 
+.sketchbox,
 .box {
-    height: 60px;
-    width: 60px;
     border: 1px dashed #a9a9a9;
 }
 
